add docs for user apis
