# docs/swagger.json
@@ -4,6 +4,44 @@
         "contact": {}
     },
     "paths": {
+        "/api/v1/Users/login": {
+            "post": {
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Users"
+                ],
+                "summary": "Register new account",
+                "responses": {
+                    "200": {
+                        "description": "{\"status\":200,\"data\":{\"token\":string},\"msg\":\"Login succeed\"}",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
+        "/api/v1/Users/register": {
+            "post": {
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Users"
+                ],
+                "summary": "Register new account",
+                "responses": {
+                    "200": {
+                        "description": "{\"status\":200,\"data\":{},\"msg\":\"Register new user succeed\"}",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
         "/api/v1/todo": {
             "get": {
                 "produces": [
